tests/ui/de-unit-struct.stderr
error: Unit structs aren't supported by the DeserializeFromValue derive macro
 --> tests/ui/de-unit-struct.rs:3:10
  |
3 | #[derive(DeserializeFromValue)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserializeFromValue` (in Nightly builds, run with -Z macro-backtrace for more info)
